<resources>
    <string name="app_name">Zavrsni</string>
    <string name="never_show_this_again">Never show this again</string>
    <string name="ok">Ok</string>
    <string name="game_explanation">The goal of the game is to create a maze with 15 pieces of food, 3 bombs and any
        number of walls. The algorithm then tries to program the ant to complete the maze. The ant has no memory of
        where its been or what it has seen. It can only see directly in front of itself, can only move forward
        and rotate by 90 degrees in any direction. If the ant steps on a bomb it dies. If it eats all the pieces of food
        in a limited number of actions (250 rotations/movements) it wins. At the end of the calculation you are given
        the time it took for the algorithm to crack the maze. The number of iterations of the algorithm is limited
        and because of that the ant may sometimes fail to eat all the pieces of food.
    </string>
    <string name="see_result">See Result</string>
    <string name="returnBtnText">Return</string>
    <string name="reset_map">Reset map</string>
    <string name="food_warning">Please put all 15 pieces of food on the map</string>
    <string name="clear_map">Clear Map</string>
    <string name="save_map">Save map</string>
    <string name="load_map">Load map</string>
    <string name="about">About</string>
    <string name="compresed_res">See compressed result</string>
    <string name="send_result">Save result</string>
    <string name="e_mail">E-mail:</string>
    <string name="save">Save</string>
    <string name="map_name">Name:</string>
    <string name="name">name</string>
</resources>
