<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <Button
            android:text="@string/clear_map"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/clearMapBtn" android:layout_marginEnd="32dp"
            android:background="@drawable/menu_button_background"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"/>
        <Button
                android:text="@string/save_map"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:id="@+id/saveBtn" android:layout_marginEnd="32dp"
                android:background="@drawable/menu_button_background"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@id/clearMapBtn"
                android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/load_map"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/loadBtn" android:layout_marginEnd="32dp"
            android:background="@drawable/menu_button_background"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@id/saveBtn"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/about"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/aboutBtn" android:layout_marginEnd="32dp"
            android:background="@drawable/menu_button_background"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@id/loadBtn"
            android:layout_marginTop="8dp"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>