<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <Button
            android:text="@string/compresed_res"
            android:layout_width="0dp"
            android:background="@drawable/menu_button_background"
            android:layout_height="wrap_content"
            android:id="@+id/seeCompressedResultBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/seeResultBtn" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/returnBtn" android:layout_marginStart="8dp"
            android:layout_marginEnd="6dp"/>

    <Button
            android:text="@string/send_result"
            android:layout_width="0dp"
            android:background="@drawable/menu_button_background"
            android:layout_height="wrap_content"
            android:id="@+id/sendResultBtn"
            app:layout_constraintStart_toEndOf="@+id/seeCompressedResultBtn"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@id/returnBtn" android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"/>

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTV" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/sendResultBtn"/>
    <Button
            android:text="@string/see_result"
            android:layout_width="0dp"
            android:background="@drawable/menu_button_background"
            android:layout_height="wrap_content"
            android:id="@+id/seeResultBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/returnBtn" android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"/>
    <Button
            android:text="@string/returnBtnText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_button_background"
            android:id="@+id/returnBtn" app:layout_constraintStart_toEndOf="@+id/seeResultBtn"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"/>
</android.support.constraint.ConstraintLayout>